--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=TienTien\\SQLEXPRESS;Initial Catalog=ApiNetT26;User ID=sa;Password=Abcd1234;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "Default": "Data Source=TienTien\\SQLEXPRESS;Initial Catalog=ApiNetT26;User ID=sa;Password=Abcd1234;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "APINET_T26IdentityContextConnection": "Data Source=TienTien\\SQLEXPRESS;Initial Catalog=ApiNetT26;User ID=sa;Password=Abcd1234;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "Jwt": {
+    "Key": "QVBJTkVUQDEyM0BfVDI2QDEyMzQ1NkAxMjM0QDEyMzQ",
+    "Issuer": "admin@localhost",
+    "Audience": "admin@localhost",
+    "Seconds": 3600
   }
 }
